# gol

./: CMakeLists.txt  config.json  db.sql  main.cpp
src/: gameOfLife.cpp  golCrowApp.cpp  golCrowServer.cpp  goldb.cpp  main.cpp  redisUserCacher.cpp
src/include/: gameOfLife.hpp  golCrowApp.hpp  golCrowServer.hpp  goldb.hpp  redisUserCacher.hpp  user.hpp
static/: index.css  index.html  login.html  login.js  reg.html  register.css  register.html
static/index/: index.html
static/login/: login.html
static/register/: register.html  register.js
static/secret/: secret.html
